<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ekr3"
    tools:context="com.example.tr.denemematuyg.Main2Activity">

    <TextView
        android:id="@+id/sayi1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/say2"
        android:textSize="40sp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toLeftOf="@+id/imageView"
        android:layout_marginRight="24dp" />

    <TextView
        android:id="@+id/sayi2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/say1"
        android:textSize="40sp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bulson"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="2"
        android:hint=""
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="@+id/textView10"
        app:layout_constraintRight_toRightOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:onClick="kontol1"
        android:text="@string/kontrol"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="@+id/editText2"
        app:layout_constraintRight_toRightOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />


    <TextView
        android:id="@+id/zamanla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/beyaz"
        android:text="@string/süre"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintTop_toTopOf="@+id/skore"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/skore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/beyaz"
        android:text="@string/skor"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/cikistoplam"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_exit_to_app_white_24dp"
        android:onClick="ciktop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skore" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dip"
        android:layout_height="48dip"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
